multi-schema tenancy

--- a/gengine/templates_tenant/admin_layout.html
+++ b/gengine/templates_tenant/admin_layout.html
@@ -8,7 +8,7 @@
 
 {% block tail %}
   {{ super() }}
-  <div class="container" id="footer">Gamification-Engine {{gamification_engine_version}} - Built with &#9825; at Gamification-Software.com &copy; 2015</div>
+  <div class="container" id="footer">Gamification-Engine {{gamification_engine_version}} - Built with &#9825; at Gamification-Software.com &copy; 2015-2016</div>
   <script type="text/javascript" src="{{ url_for('static_gengine', filename='api.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static_gengine', filename='admin.js') }}"></script>
 {% endblock %}
